--- a/greeting.html
+++ b/greeting.html
@@ -13,11 +13,15 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/16.1.0/umd/react-dom.development.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
     <script type="text/babel">
+
+    const welcome ="Welcome to my React App";
+
         class Greeting extends React.Component {
             render() {
                 return (
                     <div>
                     <h1>Hello World!</h1>
+                    <h2 className="App-title">{welcome}</h2>
                     </div>
                 );
             }
@@ -26,7 +30,6 @@
         ReactDOM.render(
             <Greeting />, document.getElementById('app')
         );
-     
          </script>
 </body>
 </html>
